# holborn

./: .envrc  .gitattributes  .gitignore  .stylish-haskell.yaml  .travis.yml  Makefile  README.md  TODO.org  Vagrantfile  circle.yml  holborn.cabal  reading-list.md  shell.nix  stack.yaml  vagrant.nix
ci/: README.md  autobahn.nix  buildbot-ci.nix  buildbot-master-box.nix  buildbot-module.nix  buildbot-pkg-0.9.nix  buildbot-slave-0.9.nix  buildbot-slave-module.nix  buildbot-www-0.9.nix
ci/config/: default.nix  setup.py
ci/config/holborn_bb/: __init__.py  _config.py
ci/deploy/: all-in-one-box.nix  buildbot-ci-aws.nix  buildbot-ci.nix
ci/deploy/templates/: master.cfg.nix  nginx.conf.nix
ci/modules/: buildbot-master.nix  buildbot-worker.nix  oauth2_proxy.nix
ci/modules/templates/: buildbot-worker.tac.nix
conf/: .gitignore  testconf-tom
deploy/: .envrc  README.md  aws.nix  ports.nix
deploy/nginx/: login.norf.co.nix  norf.co.nix
deploy/nix/: dex-module.nix  holborn-api-module.nix  holborn-openssh-module.nix  holborn-proxy-module.nix  holborn-repo-module.nix  holborn-web-module.nix  nginx.conf.nix
deploy/secrets/: id_rsa_jml.pub  id_rsa_tom.pub  keys.nix  ssh_host_dsa_key  ssh_host_dsa_key.pub  ssh_host_rsa_key  state.nixops
doc/: NOTES.md
example-data/: README.md  plain_tree_format.py  simple.py  tree_format.py
hcl/: default.nix  hcl.cabal  package.yaml
hcl/src/: Main.hs  dev-db.hs  unused.hs  wait-for-port.hs
holborn-api/: .gitignore  README.md  default.nix  holborn-api.cabal  package.yaml  shell.nix
holborn-api/holborn-api-server/: Main.hs
holborn-api/lib/Holborn/: API.hs  Auth.hs  Docs.hs  Errors.hs
holborn-api/lib/Holborn/API/: Api.hs  Auth.hs  Browse.hs  Config.hs  CreateAccount.hs  CreateRepository.hs  Internal.hs  Keys.hs  NewRepo.hs  SSH.hs  Templates.hs  Types.hs  User.hs
holborn-api/lib/Holborn/API/Settings/: Profile.hs  SSHKeys.hs
holborn-api/lib/Holborn/Api/: Internal.hs
holborn-api/lib/Holborn/JSON/: Browse.hs  Keys.hs  Response.hs  User.hs
holborn-api/lib/Holborn/JSON/Settings/: Profile.hs
holborn-api/sql/: README.md  initial.sql  render_deps.py  sample-data.sql
holborn-api/src/: Main.hs
holborn-api/templates/: landing.html  signup.html
holborn-api/tests/: CreateRepository.hs  Fixtures.hs  Helpers.hs  Internal.hs  Main.hs  NewRepo.hs  Postgres.hs  SSH.hs  Tests.hs  Types.hs
holborn-api/tests/Settings/: SSHKeys.hs
holborn-common-types/: default.nix  holborn-common-types.cabal  holborn-json.cabal  package.yaml
holborn-common-types/lib/Holborn/: Auth.hs  Logging.hs  ServantTypes.hs
holborn-common-types/lib/Holborn/API/: Types.hs
holborn-common-types/lib/Holborn/CommonTypes/: Repo.hs
holborn-common-types/lib/Holborn/JSON/: Browse.hs  CreateAccount.hs  NewRepo.hs  RepoMeta.hs  Response.hs  SSHRepoCommunication.hs  User.hs
holborn-common-types/lib/Holborn/JSON/Settings/: Profile.hs  SSHKeys.hs
holborn-common-types/tests/: Helpers.hs  Main.hs  RepoMeta.hs  SSH.hs  Types.hs
holborn-json/: default.nix  holborn-json.cabal
holborn-json/lib/Holborn/: Auth.hs
holborn-people/: README.md  shell.nix
holborn-people/people/: manage.py
holborn-people/people/org/: api.py  models.py  tests.py
holborn-people/people/people/: settings.py  urls.py  wsgi.py
holborn-prelude/: README.md  default.nix  holborn-prelude.cabal  package.yaml
holborn-prelude/lib/: HolbornPrelude.hs
holborn-prelude/tests/: Tests.hs
holborn-proxy/: .envrc  README.md  default.nix  holborn-proxy.cabal  package.yaml  research.md
holborn-proxy/src/: haskell-proxy.hs  holborn-proxy.hs
holborn-proxy/tests/: Tests.hs
holborn-repo/: default.nix  holborn-repo.cabal  package.yaml  performance.md  shell.nix
holborn-repo/lib/Holborn/: Repo.hs
holborn-repo/src/: Main.hs
holborn-repo/tests/: Main.hs
holborn-ssh/: README.md  default.nix  docker.nix  holborn-ssh.cabal  package.yaml
holborn-ssh/holborn-authorized-keys/: Main.hs
holborn-ssh/holborn-connect-repo/: Main.hs
holborn-syntax/: default.nix  holborn-syntax.cabal  package.yaml  release.nix  shell.nix
holborn-syntax/lib/Holborn/: HtmlFormat.hs  Internal.hs  Python.hs  Scope.hs  ServantExtensions.hs  Syntax.hs  Types.hs  Web.hs
holborn-syntax/lib/Holborn/Syntax/: Internal.hs  Python.hs  Scope.hs  Types.hs
holborn-syntax/lib/Holborn/Syntax/Languages/: Python.hs
holborn-syntax/src/: Main.hs
holborn-syntax/tests/: PythonBindings.hs  Tests.hs
holborn-ui/: .envrc  README.md  bower.json  default.nix  entry.js  holborn-ui.cabal  index.html  package.json  shell.nix  webpack.config.js
holborn-ui/holborn-ui-server/: Main.hs
holborn-ui/scss/: _header.scss  holborn-ui.scss
holborn-ui/sql/: initial.sql
holborn-ui/src/: Main.purs  entry.js
holborn-ui/src/Components/: Response.purs  Router.purs  Validated.purs
holborn-ui/src/Holborn/: Auth.purs  Browse.purs  Config.purs  CreateAccount.purs  CreateRepository.purs  DomHelpers.js  (+10 more)
holborn-ui/test/: Main.purs
holborn-ui/tests/: Tests.hs
holborn-web/: default.nix  holborn-web.cabal  holborn.cabal  shell.nix
holborn-web/lib/Holborn/: HtmlFormat.hs  Python.hs  Scope.hs  Style.hs  Types.hs  Web.hs
holborn-web/src/: ExampleData.hs  Main.hs
holborn-web/tests/: PythonBindings.hs  Tests.hs
integration-tests/: build-everything.nix  default.nix  helpers.nix  holborn-openssh-test.nix  holborn-protocol-test-1.nix  holborn-ssh-authz-test.nix  integration-tests.nix  ssh-config-file  test-repo.nix
models/: README.md  manage.py  setup.py
models/core/: models.py
models/holborn/: settings.py  urls.py  wsgi.py
nix/: README.md  aeson.nix  all-packages.nix  bower_modules.nix  dex.nix  errors.nix  frontend.nix  hoauth2.nix  holborn-models.nix  holborn-ssh.nix  http-client.nix  language-javascript.nix  language-python.nix  node_modules.nix  pipes-aeson.nix  pipes-shell.nix  protolude.nix  purescript.nix  servant-purescript.nix  servant-subscriber.nix  unexceptionalio.nix
nix/servant/: servant-client.nix  servant-docs.nix  servant-foreign.nix  servant-js.nix  servant-mock.nix  servant-server.nix  servant.nix
tools/: ghc_nix.py
(+38 files in other folders)
