name:                holborn-api
version:             0.1.0.0
author:              Tom Hunger
maintainer:          tehunger@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Holborn.API.User
                     , Holborn.API.Api
                     , Holborn.API.Internal
                     , Holborn.Docs
                     , Holborn.Errors
                     , Holborn.API.Browse
                     , Holborn.API.Auth
                     , Holborn.API.Settings.SSHKeys
                     , Holborn.API.Settings.Profile
                     , Holborn.API.Templates
  build-depends:       base >=4.8 && <5
                     , postgresql-simple
                     , text
                     , bytestring
                     , errors
                     , basic-prelude
                     , aeson >= 0.10
                     , servant-server >=0.5
                     , blaze-html
                     , blaze-markup
                     , either
                     , jwt
                     , attoparsec
                     , time
                     , transformers
                     , servant-docs >= 0.5
                     , wai
                     , http-reverse-proxy
                     , http-client
                     , http-types
                     , holborn-common-types >= 0.1.3

  hs-source-dirs:      lib
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings


Test-Suite holborn-api-tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:       base >=4.8 && <5
                     , tasty >= 0.10
                     , tasty-hunit >= 0.9.0
                     , tasty-quickcheck >= 0.8
                     , basic-prelude >= 0.3.13
                     , holborn-api
                     , QuickCheck
                     , postgresql-simple
                     , errors
                     , holborn-common-types

  hs-source-dirs:      tests
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings


executable holborn-api-server
  main-is:             Main.hs
  hs-source-dirs:      holborn-api-server
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <5
                     , basic-prelude >= 0.3.13 && <0.6
                     , servant-server >= 0.5
                     , wai >= 3.0
                     , warp >= 3.1
                     , envparse >= 0.2
                     , postgresql-simple
                     , http-client
                     , holborn-api
                     , holborn-common-types

  ghc-options:         -eventlog
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
