name:                holborn-api
version:             0.1.0.0
author:              Tom Hunger
maintainer:          tehunger@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Holborn.API.User
                     , Holborn.API
                     , Holborn.API.Auth
                     , Holborn.API.Browse
                     , Holborn.API.Config
                     , Holborn.API.Internal
                     , Holborn.API.NewRepo
                     , Holborn.API.SSH
                     , Holborn.API.Settings.Profile
                     , Holborn.API.Settings.SSHKeys
                     , Holborn.Docs
  build-depends:       base >=4.8 && <5
                     , postgresql-simple
                     , text
                     , bytestring
                     , errors
                     , basic-prelude
                     , aeson >= 0.10
                     , servant-server >=0.5
                     , blaze-html
                     , blaze-markup
                     , either
                     , jwt
                     , attoparsec
                     , time
                     , transformers
                     , servant-docs >= 0.5
                     , wai
                     , warp >= 3.1
                     , http-reverse-proxy
                     , http-client
                     , http-types
                     , holborn-common-types >= 0.1.3

  hs-source-dirs:      lib
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , NamedFieldPuns
                     , RecordWildCards
                     , GeneralizedNewtypeDeriving
                     , ScopedTypeVariables

Test-Suite holborn-api-tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:       base >=4.8 && <5
                     , tasty >= 0.10
                     , tasty-hunit >= 0.9.0
                     , tasty-quickcheck >= 0.8
                     , tasty-hspec >= 1.1.0
                     , hspec-wai >= 0.6.5
                     , hspec-wai-json >= 0.6.0
                     , basic-prelude >= 0.3.13
                     , holborn-api
                     , QuickCheck
                     , aeson
                     , bytestring
                     , errors
                     , process
                     , holborn-common-types
                     , servant-server
                     , wai
                     , process
                     , http-types

  hs-source-dirs:      tests
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , NamedFieldPuns
                     , RecordWildCards
                     , GeneralizedNewtypeDeriving


executable holborn-api-server
  main-is:             Main.hs
  hs-source-dirs:      holborn-api-server
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <5
                     , basic-prelude >= 0.3.13 && <0.6
                     , servant-server >= 0.5
                     , wai >= 3.0
                     , warp >= 3.1
                     , envparse >= 0.2
                     , holborn-api
                     , holborn-common-types
                     , wai-cors

  ghc-options:         -eventlog
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , NamedFieldPuns
                     , RecordWildCards
                     , GeneralizedNewtypeDeriving
