name:                holborn-common-types
version:             0.1.3.0
-- synopsis:
-- description:
license:             AllRightsReserved
author:              teh, jml
maintainer:          tehunger@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Holborn.JSON.User
                     , Holborn.JSON.Response
                     , Holborn.JSON.Browse
                     , Holborn.JSON.RepoMeta
                     , Holborn.JSON.Settings.SSHKeys
                     , Holborn.JSON.Settings.Profile
                     , Holborn.JSON.SSHRepoCommunication
                     , Holborn.Logging
                     , Holborn.API.Types
                     , Holborn.Auth
                     , Holborn.ServantTypes

  build-depends:       base >=4.8 && <5.0
                     , aeson >= 0.10
                     , basic-prelude >= 0.3.13 && <0.6
                     , bcrypt
                     , process
                     , http-client
                     , bytestring
                     , time
                     , postgresql-simple
                     , entropy
                     , containers
                     , http-api-data
                     , servant
                     , servant-server
                     , http-media

  hs-source-dirs:      lib
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , NamedFieldPuns
                     , RecordWildCards
                     , GeneralizedNewtypeDeriving
