name:                holborn-ssh
version:             0.1.0.0
author:              Tom Hunger and Jonathan Lange
maintainer:          jml@mumak.net
build-type:          Simple
cabal-version:       >=1.10

executable holborn-authorized-keys
  main-is:             Main.hs
  hs-source-dirs:      holborn-authorized-keys
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <5
                     , bytestring
                     , envparse >= 0.2
                     , http-client
                     , servant >= 0.5
                     , servant-client >= 0.5
                     , transformers
                     , holborn-common-types
                     , holborn-api
                     , holborn-prelude
                     , optparse-applicative

  ghc-options:         -Wall -threaded -eventlog
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , NamedFieldPuns
                     , RecordWildCards
                     , GeneralizedNewtypeDeriving


executable holborn-connect-repo
  main-is:             Main.hs
  hs-source-dirs:      holborn-connect-repo
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <5
                     , envparse >= 0.2
                     , http-client
                     , holborn-api
                     , holborn-common-types
                     , holborn-prelude
                     , servant >= 0.5
                     , servant-client >= 0.5
                     , transformers
                     , pipes
                     , pipes-aeson
                     , pipes-bytestring
                     , pipes-network

  ghc-options:         -Wall -threaded -eventlog
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , NamedFieldPuns
                     , RecordWildCards
                     , GeneralizedNewtypeDeriving
                     , MonadFailDesugaring
