name:                holborn-syntax
version:             0.1.0.0
synopsis:            Code search
description:         Syntax analysis for source code
homepage:            https://bitbucket.com/mumak/holborn
license:             AllRightsReserved
author:              Jonathan M. Lange and Thomas Hunger
maintainer:          jml@mumak.net
copyright:           Jonathan M. Lange and Thomas Hunger
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Holborn.Web
                     , Holborn.Style
                     , Holborn.HtmlFormat
                     , Holborn.Internal
                     , Holborn.Types
                     , Holborn.Scope
                     , Holborn.Python
  build-depends:       base >=4.8 && <4.9
                     , basic-prelude >= 0.5 && <0.6
                     , highlighter2 >= 0.2 && <0.3
                     , blaze-html >= 0.8 && <0.9
                     , blaze-markup >= 0.7 && <0.8
                     , text >= 1.2 && <1.3
                     , bytestring >= 0.10 && <0.11
                     , language-python >= 0.5.0 && <0.6
                     , containers >= 0.5 && <0.6
                     , mtl >= 2.2 && <2.3
                     , pretty-error
  hs-source-dirs:      lib
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  ghc-options:         -Wall

executable holborn
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       ExampleData
  build-depends:       base >=4.8 && <4.9
                     , basic-prelude >= 0.3.13 && <0.6
                     , blaze-html >= 0.8 && <0.9
                     , bytestring >= 0.10.0
                     , servant >= 0.4 && <0.5
                     , servant-blaze >= 0.4 && <0.5
                     , servant-server >= 0.4 && <0.5
                     , wai >= 3.0 && <3.1
                     , warp >= 3.1 && <3.2
                     , holborn-syntax
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings

Test-Suite holborn-test
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:       base >=4.8 && <4.9
                     , tasty >= 0.10 && <0.11
                     , tasty-hunit >= 0.9.0 && <0.10
                     , tasty-quickcheck >= 0.8 && <0.9
                     , basic-prelude >= 0.3.13 && <0.6
                     , holborn-syntax
  hs-source-dirs:      tests
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
