name:                holborn-syntax
version:             0.2.0.0
synopsis:            Syntax analysis library
homepage:            https://bitbucket.com/mumak/holborn
license:             AllRightsReserved
author:              Jonathan M. Lange and Thomas Hunger
maintainer:          jml@mumak.net
copyright:           Jonathan M. Lange and Thomas Hunger
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Holborn.Syntax
                     , Holborn.HtmlFormat
                     , Holborn.Internal
                     , Holborn.Types
                     , Holborn.Scope
                     , Holborn.ServantExtensions
                     , Holborn.Python
  build-depends:       base >=4.8 && <4.9
                     , basic-prelude >= 0.5 && <0.6
                     , highlighter2 >= 0.2 && <0.3
                     , blaze-html >= 0.8 && <0.9
                     , blaze-markup >= 0.7 && <0.8
                     , either >= 4.4
                     , errors >= 2.0
                     , filepath >= 1.4
                     , text >= 1.2 && <1.3
                     , bytestring >= 0.10 && <0.11
                       -- minimum 0.5.2 to catch unicode bug fix
                     , language-python >= 0.5.2 && <0.6
                     , servant >= 0.4 && <0.5
                     , servant-blaze >= 0.4 && <0.5
                     , servant-server >= 0.4 && <0.5
                     , containers >= 0.5 && <0.6
                     , directory >= 1.2.2
                     , mtl >= 2.2 && <2.3
                     , wai >= 3.0 && <3.1
                     , pretty-error
  hs-source-dirs:      lib
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  ghc-options:         -Wall

Test-Suite holborn-test
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:       base >=4.8 && <4.9
                     , tasty >= 0.10
                     , tasty-hunit >= 0.9.0
                     , tasty-quickcheck >= 0.8
                     , basic-prelude >= 0.3.13
                     , holborn-syntax
  hs-source-dirs:      tests
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
