name:                holborn-web
version:             0.1.0.0
synopsis:            Code search
description:         Web service for browseable, clickable code
homepage:            https://github.com/jml/holborn
license:             GPL-3
license-file:        LICENSE
author:              Jonathan M. Lange and Thomas Hunger
maintainer:          jml@mumak.net
copyright:           Jonathan M. Lange and Thomas Hunger
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Holborn.Web
                     , Holborn.Style
                     , Holborn.Types
  build-depends:       base >=4.8 && <4.9
                       -- We want basic-prelude 0.4.0, but it's not in Nix yet.
                     , basic-prelude >= 0.3.13 && <0.6
                     , highlighter2 >= 0.2 && <0.3
                     , blaze-html >= 0.8 && <0.9
                     , text >= 1.2 && <1.3
                     , bytestring >= 0.10.0
  hs-source-dirs:      lib
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  ghc-options:         -Wall

executable holborn
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       ExampleData
  build-depends:       base >=4.8 && <4.9
                     , Spock >= 0.7.9 && <0.8
                     , basic-prelude >= 0.3.13 && <0.6
                     , blaze-html >= 0.8 && <0.9
                     , holborn-web
                     , bytestring >= 0.10.0
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings

Test-Suite holborn-test
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:       base >=4.8 && <4.9
                     , tasty >= 0.10 && <0.11
                     , tasty-quickcheck >= 0.8 && <0.9
                     , basic-prelude >= 0.3.13 && <0.6
                     , holborn-web
  hs-source-dirs:      tests
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
